--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
 #arquivos e pastas a serem ignorados nos próximos commits
 nbproject/
 .idea/
-vendor/*
-composer.*
 tmp/
+
+### Composer ###
+composer.*
+/vendor/
+
+# Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
+# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
+# composer.lock
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
